fix: dashboard admin navbar button not showing up in mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1595,8 +1595,7 @@ trix-toolbar .trix-button {
 .navbar-dark img {
   width: 200px;
 }
-.navbar-dark button,
-.navbar-dark .navbar-nav {
+.navbar-dark .navbar-brand {
   display: none;
 }
 
