--- a/public/scss/pages/_dashboard-admin.scss
+++ b/public/scss/pages/_dashboard-admin.scss
@@ -86,8 +86,7 @@ trix-toolbar .trix-button {
         width: 200px;
     }
 
-    button,
-    .navbar-nav {
+    .navbar-brand {
         display: none;
     }
 }
